--- a/Project_1/index.html
+++ b/Project_1/index.html
@@ -77,10 +77,17 @@
 
             </div>
         </div>
-
-
     </header>
 
+
+
+    <!--
+    <section class="inbox clb">
+        <div class="col-12 h21">
+
+        </div>
+    </section>
+-->
 
 
     <!--1.배너슬라이드-->
